--- a/microservices/STM/Configuration/Configuration.csproj
+++ b/microservices/STM/Configuration/Configuration.csproj
@@ -9,11 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.1.3" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="Polly" Version="8.2.1" />
     <PackageReference Include="Scrutor" Version="4.2.2" />
+    <PackageReference Include="ServiceMeshHelper" Version="1.5.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
@@ -21,12 +24,14 @@
     <ProjectReference Include="..\Application.Commands\Application.Commands.csproj" />
     <ProjectReference Include="..\Application.Common\Application.Common.csproj" />
     <ProjectReference Include="..\Application.Queries\Application.Queries.csproj" />
+    <ProjectReference Include="..\Controllers.Events\Controllers.Events.csproj" />
     <ProjectReference Include="..\Controllers.Jobs\Controllers.Jobs.csproj" />
     <ProjectReference Include="..\Controllers.Rest\Controllers.Rest.csproj" />
     <ProjectReference Include="..\Infrastructure.ApiClients\Infrastructure.ApiClients.csproj" />
     <ProjectReference Include="..\Infrastructure.Events\Infrastructure.Events.csproj" />
     <ProjectReference Include="..\Infrastructure.FileHandlers\Infrastructure.FileHandlers.csproj" />
     <ProjectReference Include="..\Infrastructure.ReadRepositories\Infrastructure.ReadRepositories.csproj" />
+    <ProjectReference Include="..\Infrastructure.TcpClients\Infrastructure.TcpClients.csproj" />
     <ProjectReference Include="..\Infrastructure.WriteRepositories\Infrastructure.WriteRepositories.csproj" />
   </ItemGroup>
 
