--- a/microservices/STM/Controllers.Events/Controllers.Events.csproj
+++ b/microservices/STM/Controllers.Events/Controllers.Events.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MassTransit.Abstractions" Version="8.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Application.Commands\Application.Commands.csproj" />
+    <ProjectReference Include="..\Application.EventHandlers\Application.EventHandlers.csproj" />
+  </ItemGroup>
+
 </Project>
