--- a/microservices/STM/Controllers.Jobs/Controllers.Jobs.csproj
+++ b/microservices/STM/Controllers.Jobs/Controllers.Jobs.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+    <PackageReference Include="ServiceMeshHelper" Version="1.5.3" />
   </ItemGroup>
 
   <ItemGroup>
